--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,10 @@ tr.selected_row {
     background-color: #777777;
 }
 
-#svg {
+/* #svg {
   fill:url(#grid);
 }
-
+ */
 *.unselectable {
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
@@ -119,12 +119,16 @@ tr.selected_row {
   
   display: flex;
   justify-content: center;
-  align-items: center;
   padding: 30px 25px 25px 11px ;
   /*width: 100%!important;
+  align-items: center;
   border: 0.2px solid var(--paleColor);
   border-top: none;
   box-shadow: -1px -4px 20px 5px rgb(2 255 255 / 30%);*/
+}
+
+#wrapper_svg > div >div {
+  margin-top: 30px;
 }
 
 #wrapper_part_list {
